--- a/style.scss
+++ b/style.scss
@@ -19,20 +19,13 @@ License URI: license.txt
 //=======================
 
 html {
-  background: #998158;
+  background-color: black;
 }
 
 body {
-	background: #d7d5d0;
+  background-image:url('img/deco-tile.png');
+  background-repeat:repeat;
   color: #777777;
-}
-
-.front-page #wrapper {
-  margin: 20px 0px 0px 0px;
-}
-
-#wrapper {
-  margin: 20px 0px 40px 0px;
 }
 
 
@@ -49,8 +42,8 @@ body {
 }
 
 #header {
-  background-color:#998158;
-  box-shadow: -2px 5px 20px #93928f;
+  background: rgba(255,255,255,.4);
+  position: relative;
 }
 
 #header-width {
@@ -63,23 +56,22 @@ body {
 //     MENU
 //====================
 
+
+
 .menu {
-  background-color: #998158;
+  position: absolute;
+  right: 20px;
+  bottom: 0px;
+  background-color: transparent;
   background-image: none;
-/*  background-image: -webkit-linear-gradient(top, #585858, #3d3d3d);
-  background-image: -moz-linear-gradient(top, #585858, #3d3d3d);
-  background-image: -ms-linear-gradient(top, #585858, #3d3d3d);
-  background-image: -o-linear-gradient(top, #585858, #3d3d3d);
-  background-image: linear-gradient(top, #585858, #3d3d3d); */
   clear: both;
-//  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#585858, endColorstr=#3d3d3d);
   margin: 0 auto;
 }
 
 
 .menu a {
   border-left: 0px;
-  color: #f7f2e9;
+  color: #4c4c4c;
   cursor: pointer;
   display: block;
   font-size: 13px;
@@ -138,11 +130,9 @@ ul.menu > li:hover {
 
 .menu li li a:hover { //menu drop down item selected
   background: #974B35 !important;
-  background-image: none;
   border: none;
   color: #FFFFFF;
   filter: none;
-  font-weight: 700;
 }
 
 //===================
@@ -165,7 +155,7 @@ ul.menu > li:hover {
 .widget-wrapper {
   -webkit-border-radius: 0px;
   -moz-border-radius: 0px;
-  background-color: #c9c5c0;
+  background: rgba(255,255,255,.4);
   border-width: 0 0 0 0;
 //  background: transparent url('img/radial_gradient.svg') -5% -15% no-repeat;
   border-radius: 0px;
@@ -248,8 +238,7 @@ ul.menu > li:hover {
 #featured {
   -moz-border-radius: 0px;
   -webkit-border-radius: 0px;
-  background-color: #c9c5c0;
-//  background: transparent url('img/radial_gradient.svg') top left no-repeat;
+  background-color: rgba(255,255,255,.4);
   border: 0px solid #e5e5e5;
   border-radius: 0px;
   padding-bottom: 0px;
@@ -289,11 +278,8 @@ ul.menu > li:hover {
   display: block;
 }
 
-#featured-image {
-  margin: 0 20px 0 20px;
-}
 
-#container#wrapper#featured.grid.col-300 {   ///why doesn't this work?
+#featured .grid.col-300 {
   margin-right: 0px;
 }
 
@@ -344,6 +330,11 @@ blockquote {
 
 //}
 
+footer {
+  background-color: rgba(255,255,255,.25);
+  border-bottom: 1px solid transparent;
+}
+
 .site-info {
   color: #f7f2e9;
   box-shadow: 0px -5px 20px #93928f;
@@ -360,7 +351,7 @@ blockquote {
 
 .footer {
   display: block;
-  max-width: 960px;
+  max-width: 800px;
   margin-left: auto;
   margin-right: auto;
   margin-top: 20px;
@@ -374,40 +365,37 @@ blockquote {
 
 .footer-1 {
   display: block;
-  width: 25%;
+  width: 30%;
   float: left;
 //  margin: auto;
   min-width: 200px;
-  vertical-align: top;
-  padding: 0px 0px 10px 0px;
-
+  vertical-align: middle;
+  padding: 10px 0px 0 0;
 }
 
 .footer-2 {
   display: block;
-  width: 20%;
+  width: 25%;
   float: left;
 //  margin: auto;
   min-width: 150px;
   vertical-align: middle;
-  padding: 10px 0px 10px 0px;
+  padding: 10px 0px 0px 0px;
 }
 
 .footer-3 {
   display: block;
-  width: 30%;
+  width: 20%;
   float: left;
-//  margin: auto;
   min-width: 150px;
   vertical-align: middle;
-  padding: 10px 0px 10px 0px;
+  padding: 10px 0px 0px 0px;
 }
 
 .footer-4 {
   display: block;
   width: 25%;
   float: left;
-//  margin: auto;
   min-width: 150px;
   vertical-align: middle;
   padding: 10px 0px 10px 0px;
@@ -431,3 +419,28 @@ blockquote {
     width: 0;
     height: 150%;
 }
+
+
+//======================
+//     Full Size
+//======================
+
+@media all and (min-width:980px) {  // anything 980px and larger
+  .menu {
+    right: 50%;
+    margin-right: -480px;
+  }
+
+  #featured-image {
+  margin: 0 0px 0 20px;
+  position: absolute;
+  right: 2px;
+  width: 652px;
+}
+
+}
+
+@media all and (max-width: 480px) { // anything 480px and smaller
+
+}
+
