--- a/style.css
+++ b/style.css
@@ -15,26 +15,17 @@ License URI: license.txt
 */
 /* line 21, style.scss */
 html {
-  background: #998158;
+  background-color: black;
 }
 
 /* line 25, style.scss */
 body {
-  background: #d7d5d0;
+  background-image: url("img/deco-tile.png");
+  background-repeat: repeat;
   color: #777777;
 }
 
-/* line 30, style.scss */
-.front-page #wrapper {
-  margin: 20px 0px 0px 0px;
-}
-
-/* line 34, style.scss */
-#wrapper {
-  margin: 20px 0px 40px 0px;
-}
-
-/* line 43, style.scss */
+/* line 36, style.scss */
 #logo a {
   width: 250px;
   height: 65px;
@@ -42,35 +33,33 @@ body {
   background: transparent url("img/sacred_gifts_logo.svg") top left no-repeat;
 }
 
-/* line 51, style.scss */
+/* line 44, style.scss */
 #header {
-  background-color: #998158;
-  box-shadow: -2px 5px 20px #93928f;
+  background: rgba(255, 255, 255, 0.4);
+  position: relative;
 }
 
-/* line 56, style.scss */
+/* line 49, style.scss */
 #header-width {
   max-width: 960px;
   margin: auto;
 }
 
-/* line 66, style.scss */
+/* line 61, style.scss */
 .menu {
-  background-color: #998158;
+  position: absolute;
+  right: 20px;
+  bottom: 0px;
+  background-color: transparent;
   background-image: none;
-  /*  background-image: -webkit-linear-gradient(top, #585858, #3d3d3d);
-    background-image: -moz-linear-gradient(top, #585858, #3d3d3d);
-    background-image: -ms-linear-gradient(top, #585858, #3d3d3d);
-    background-image: -o-linear-gradient(top, #585858, #3d3d3d);
-    background-image: linear-gradient(top, #585858, #3d3d3d); */
   clear: both;
   margin: 0 auto;
 }
 
-/* line 80, style.scss */
+/* line 72, style.scss */
 .menu a {
   border-left: 0px;
-  color: #f7f2e9;
+  color: #4c4c4c;
   cursor: pointer;
   display: block;
   font-size: 13px;
@@ -86,26 +75,26 @@ body {
   text-transform: uppercase;
 }
 
-/* line 98, style.scss */
+/* line 90, style.scss */
 .menu a:hover {
   background-color: transparent;
   background-image: none;
   color: #ffffff;
 }
 
-/* line 104, style.scss */
+/* line 96, style.scss */
 ul.menu > li:hover {
   background-color: transparent;
   color: #ffffff;
 }
 
-/* line 110, style.scss */
+/* line 102, style.scss */
 .menu .current_page_item a,
 .menu .current-menu-item a {
   background-color: transparent;
 }
 
-/* line 115, style.scss */
+/* line 107, style.scss */
 .menu li li {
   background: #974B35;
   background-image: none;
@@ -116,7 +105,7 @@ ul.menu > li:hover {
   width: auto;
 }
 
-/* line 125, style.scss */
+/* line 117, style.scss */
 .menu li li a {
   background: transparent !important;
   border: none;
@@ -131,17 +120,15 @@ ul.menu > li:hover {
   white-space: nowrap;
 }
 
-/* line 139, style.scss */
+/* line 131, style.scss */
 .menu li li a:hover {
   background: #974B35 !important;
-  background-image: none;
   border: none;
   color: #FFFFFF;
   filter: none;
-  font-weight: 700;
 }
 
-/* line 152, style.scss */
+/* line 142, style.scss */
 .sub-header-menu {
   background-color: #974B35;
   border: 0px;
@@ -150,11 +137,11 @@ ul.menu > li:hover {
   margin: 0 auto;
 }
 
-/* line 165, style.scss */
+/* line 155, style.scss */
 .widget-wrapper {
   -webkit-border-radius: 0px;
   -moz-border-radius: 0px;
-  background-color: #c9c5c0;
+  background: rgba(255, 255, 255, 0.4);
   border-width: 0 0 0 0;
   border-radius: 0px;
   margin: 0 0 20px;
@@ -176,17 +163,17 @@ ul.menu > li:hover {
   max-height: 125px;
 }
 */
-/* line 192, style.scss */
+/* line 182, style.scss */
 #tickets-button {
   min-height: 125px;
 }
 
-/* line 196, style.scss */
+/* line 186, style.scss */
 #tickets-button a {
   color: #777777;
 }
 
-/* line 200, style.scss */
+/* line 190, style.scss */
 #download-app {
   min-height: 125px;
   max-height: 125px;
@@ -194,7 +181,7 @@ ul.menu > li:hover {
   margin: auto;
 }
 
-/* line 207, style.scss */
+/* line 197, style.scss */
 #app-download-wrapper {
   margin: auto;
   max-width: 500px;
@@ -202,21 +189,21 @@ ul.menu > li:hover {
   display: inline-block;
 }
 
-/* line 215, style.scss */
+/* line 205, style.scss */
 #left {
   height: 100px;
   float: left;
   width: 33%;
 }
 
-/* line 221, style.scss */
+/* line 211, style.scss */
 #right {
   height: 100px;
   float: left;
   width: 67%;
 }
 
-/* line 227, style.scss */
+/* line 217, style.scss */
 .testimonials-widget-testimonials2 {
   color: #777777;
   overflow: scroll;
@@ -228,29 +215,29 @@ ul.menu > li:hover {
   max-width: 500px;
 }
 
-/* line 239, style.scss */
+/* line 229, style.scss */
 .widget-title,
 .widget-title-home h3 {
   display: none;
 }
 
-/* line 248, style.scss */
+/* line 238, style.scss */
 #featured {
   -moz-border-radius: 0px;
   -webkit-border-radius: 0px;
-  background-color: #c9c5c0;
+  background-color: rgba(255, 255, 255, 0.4);
   border: 0px solid #e5e5e5;
   border-radius: 0px;
   padding-bottom: 0px;
   width: 99.893617021277%;
 }
 
-/* line 259, style.scss */
+/* line 248, style.scss */
 .featured-title {
   display: none;
 }
 
-/* line 263, style.scss */
+/* line 252, style.scss */
 #featured p {
   font-size: 14px;
   font-weight: 200;
@@ -261,7 +248,7 @@ ul.menu > li:hover {
   margin: auto;
 }
 
-/* line 273, style.scss */
+/* line 262, style.scss */
 #featured hr {
   margin: 0 0 0 0;
   padding: 0 0 0 0;
@@ -271,29 +258,24 @@ ul.menu > li:hover {
   line-height: 1px;
 }
 
-/* line 282, style.scss */
+/* line 271, style.scss */
 #artist-title p {
   font-size: 24px;
   padding: 0 40px 0 40px;
 }
 
-/* line 287, style.scss */
+/* line 276, style.scss */
 #featured-subtitle img {
   vertical-align: middle;
   display: block;
 }
 
-/* line 292, style.scss */
-#featured-image {
-  margin: 0 20px 0 20px;
-}
-
-/* line 296, style.scss */
-#container#wrapper#featured.grid.col-300 {
+/* line 282, style.scss */
+#featured .grid.col-300 {
   margin-right: 0px;
 }
 
-/* line 304, style.scss */
+/* line 290, style.scss */
 #wrapper {
   -webkit-border-radius: 0px;
   -moz-border-radius: 0px;
@@ -306,38 +288,44 @@ ul.menu > li:hover {
   position: relative;
 }
 
-/* line 316, style.scss */
+/* line 302, style.scss */
 .post-meta {
   display: none;
 }
 
-/* line 324, style.scss */
+/* line 310, style.scss */
 blockquote {
   background-color: transparent;
   border-left-width: 0px;
 }
 
-/* line 347, style.scss */
+/* line 333, style.scss */
+footer {
+  background-color: rgba(255, 255, 255, 0.25);
+  border-bottom: 1px solid transparent;
+}
+
+/* line 338, style.scss */
 .site-info {
   color: #f7f2e9;
   box-shadow: 0px -5px 20px #93928f;
 }
 
-/* line 352, style.scss */
+/* line 343, style.scss */
 .site-info.footer p {
   position: relative;
   left: 50%;
 }
 
-/* line 357, style.scss */
+/* line 348, style.scss */
 .site-info a {
   color: #f7f2e9;
 }
 
-/* line 361, style.scss */
+/* line 352, style.scss */
 .footer {
   display: block;
-  max-width: 960px;
+  max-width: 800px;
   margin-left: auto;
   margin-right: auto;
   margin-top: 20px;
@@ -348,37 +336,37 @@ blockquote {
   box-shadow: 0px -5px 20px #93928f;
 }
 
-/* line 375, style.scss */
+/* line 366, style.scss */
 .footer-1 {
+  display: block;
+  width: 30%;
+  float: left;
+  min-width: 200px;
+  vertical-align: middle;
+  padding: 10px 0px 0 0;
+}
+
+/* line 376, style.scss */
+.footer-2 {
   display: block;
   width: 25%;
   float: left;
-  min-width: 200px;
-  vertical-align: top;
-  padding: 0px 0px 10px 0px;
+  min-width: 150px;
+  vertical-align: middle;
+  padding: 10px 0px 0px 0px;
 }
 
 /* line 386, style.scss */
-.footer-2 {
+.footer-3 {
   display: block;
   width: 20%;
   float: left;
   min-width: 150px;
   vertical-align: middle;
-  padding: 10px 0px 10px 0px;
+  padding: 10px 0px 0px 0px;
 }
 
-/* line 396, style.scss */
-.footer-3 {
-  display: block;
-  width: 30%;
-  float: left;
-  min-width: 150px;
-  vertical-align: middle;
-  padding: 10px 0px 10px 0px;
-}
-
-/* line 406, style.scss */
+/* line 395, style.scss */
 .footer-4 {
   display: block;
   width: 25%;
@@ -391,7 +379,7 @@ blockquote {
 /*
  * Image replacement
  */
-/* line 420, style.scss */
+/* line 408, style.scss */
 .ir {
   background-color: transparent;
   border: 0;
@@ -400,10 +388,26 @@ blockquote {
   *text-indent: -9999px;
 }
 
-/* line 428, style.scss */
+/* line 416, style.scss */
 .ir:before {
   content: "";
   display: block;
   width: 0;
   height: 150%;
+}
+
+@media all and (min-width: 980px) {
+  /* line 429, style.scss */
+  .menu {
+    right: 50%;
+    margin-right: -480px;
+  }
+
+  /* line 434, style.scss */
+  #featured-image {
+    margin: 0 0px 0 20px;
+    position: absolute;
+    right: 2px;
+    width: 652px;
+  }
 }
