--- a/style.scss
+++ b/style.scss
@@ -33,6 +33,13 @@ body a {
   color: #A2573A;
 }
 
+body a:hover {
+  color: rgba(162,87,58,.5)
+}
+
+::selection {
+  background: rgba(112,101,87,.5);
+}
 
 //=====================
 //     HEADER
@@ -140,17 +147,7 @@ ul.menu > li:hover {
   filter: none;
 }
 
-//===================
-//  Sub header Menu
-//===================
 
-.sub-header-menu {
-  background-color: #974B35;
-  border: 0px;
-  border-top: none;
-  clear: both;
-  margin: 0 auto;
-}
 
 
 //===================
@@ -197,21 +194,22 @@ ul.menu > li:hover {
 #app-download-wrapper {
  // width: 266px;
   margin: auto;
-  max-width: 500px;
+  max-width: 400px;
   min-width: 266px;
   display: inline-block;
 }
 
 #left {
-  height: 100px;
+  height: 120px;
   float: left;
   width: 33%;
+  padding-left: 10px;
 }
 
 #right {
   height: 100px;
   float: left;
-  width: 67%;
+  width: 60%;
 }
 
 #right h4 {
@@ -272,7 +270,7 @@ ul.menu > li:hover {
   line-height: 1px;
 }
 
-#artist-title p {
+#artist-title {
   font-size: 24px;
   padding: 0 40px 0 40px;
 }
@@ -306,8 +304,9 @@ ul.menu > li:hover {
   border-radius: 0px;
   clear: both;
   margin: 20px auto 20px auto;
-  padding: 0 20px 20px 20px;
   position: relative;
+  padding-left: 40px;
+  padding-right: 40px;
 }
 
 .post-meta {
@@ -328,6 +327,40 @@ ul.menu > li:hover {
 blockquote {
   background-color: transparent;
   border-left-width: 0px;
+}
+
+//===================
+//    COMMENTS
+//===================
+
+
+#respond {
+  background-image: none;
+  border: 0px;
+  background-color: transparent;
+  padding: 0px;
+}
+
+input[type="text"] {
+  -moz-box-sizing: border-box;
+  -moz-border-radius: 0px;
+  -webkit-box-sizing: border-box;
+  -webkit-border-radius: 0px;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+  background-color: #ffffff;
+  box-sizing: border-box;
+  border: 0px solid #aaaaaa;
+  border-bottom-color: #cccccc;
+  color: #706557;
+  border-radius: 0px;
+  cursor: text;
+  margin: 0;
+  outline: none;
+  padding: 6px 8px;
+  vertical-align: middle;
+  width: 100%;
 }
 
 //==================
@@ -365,6 +398,10 @@ footer {
 
 .site-info a {
   color: #877A78;
+}
+
+.site-info a:hover {
+  color: #A2573A;
 }
 
 .footer {
@@ -437,6 +474,97 @@ footer {
     height: 150%;
 }
 
+//==============================================
+//                TICKET ESPRESSO
+//==============================================
+
+/* Corner radius */
+.ui-corner-all, .ui-corner-top, .ui-corner-left, .ui-corner-tl { -moz-border-radius-topleft: 0px; -webkit-border-top-left-radius: 0px; -khtml-border-top-left-radius: 0px; border-top-left-radius: 0px; }
+.ui-corner-all, .ui-corner-top, .ui-corner-right, .ui-corner-tr { -moz-border-radius-topright: 0px; -webkit-border-top-right-radius: 0px; -khtml-border-top-right-radius: 0px; border-top-right-radius: 0px; }
+.ui-corner-all, .ui-corner-bottom, .ui-corner-left, .ui-corner-bl { -moz-border-radius-bottomleft: 0px; -webkit-border-bottom-left-radius: 0px; -khtml-border-bottom-left-radius: 0px; border-bottom-left-radius: 0px; }
+.ui-corner-all, .ui-corner-bottom, .ui-corner-right, .ui-corner-br { -moz-border-radius-bottomright: 0px; -webkit-border-bottom-right-radius: 0px; -khtml-border-bottom-right-radius: 0px; border-bottom-right-radius: 0px; }
+
+/* month/week/day buttons
+----------------------------------*/
+.ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default { 
+  border: 1px solid transparent; 
+  background: none;
+  font-weight: normal; color: #706557; 
+}
+.ui-state-default a, .ui-state-default a:link, .ui-state-default a:visited { 
+  color: #706557; 
+  text-decoration: none; }
+.ui-state-hover, .ui-widget-content .ui-state-hover, .ui-widget-header .ui-state-hover, .ui-state-focus, .ui-widget-content .ui-state-focus, .ui-widget-header .ui-state-focus {
+  border: 1px solid transparent; 
+  background: rgba(255,255,255,.8);
+  font-weight: normal; color: #706557; 
+}
+.ui-state-hover a, .ui-state-hover a:hover { 
+  color: #706557; text-decoration: none; 
+}
+.ui-state-active, .ui-widget-content .ui-state-active, .ui-widget-header .ui-state-active { 
+  border: 1px solid transparent; 
+  background: rgba(255,255,255,.8);
+  font-weight: normal; color: #706557; 
+}
+.ui-state-active a, .ui-state-active a:link, .ui-state-active a:visited { 
+  color: #706557; 
+  text-decoration: none; 
+}
+.ui-widget :active { outline: none; }
+
+/*      Table
+------------------------------*/
+
+.ui-widget { 
+    font-family: Verdana,Arial,sans-serif; 
+    font-size: 1.1em; }
+.ui-widget .ui-widget { font-size: 1em; }
+.ui-widget input, .ui-widget select, .ui-widget textarea, .ui-widget button { 
+    font-family: Verdana,Arial,sans-serif; 
+    font-size: 1em; }
+.ui-widget-content {   // Main Table Background
+  border: 1px solid transparent; 
+  background: none;
+  color: #706557; }
+.ui-widget-content a { color: #706557; }
+.ui-widget-header {   // Date styles
+  border: 0px;
+  background: rgba(255,255,255,.5);
+  color: #706557; 
+  font-weight: normal; }
+.ui-widget-header a { 
+  color: #706557; 
+}
+
+/* Horizontal Events
+------------------------------------------------------------------------*/
+
+.fc-event-hori {
+  border-width: 0px 0;
+  margin-bottom: 3px;
+  }
+
+.fc-ltr .fc-event-hori.fc-event-start,
+.fc-rtl .fc-event-hori.fc-event-end {
+  border-left-width: 0px;
+  border-top-left-radius: 0px;
+  border-bottom-left-radius: 0px;
+  }
+
+.fc-ltr .fc-event-hori.fc-event-end,
+.fc-rtl .fc-event-hori.fc-event-start {
+  border-right-width: 0px;
+  border-top-right-radius: 0px;
+  border-bottom-right-radius: 0px;
+  }
+  
+.ui-state-focus, .ui-widget-content .ui-state-focus, .ui-widget-header .ui-state-focus {
+  border: 1px solid transparent;
+  background: rgba(255,255,255,.5);
+  font-weight: normal;
+  color: #706557;
+}
 
 //======================
 //     Full Size
@@ -466,7 +594,7 @@ footer {
   margin: auto;
   }
 
-  #artist-title p {
+  #artist-title {
   font-size: 24px;
   padding: 0 0 0 0;
   margin: 0 0 0 0;
@@ -482,11 +610,212 @@ footer {
     margin-top: 15px;
   }
 
+  .js .main-nav {
+    position: relative;
+    background-color: transparent;
+    clear: both;
+    margin: 0 auto;
+  }
+
 }
+
+
+@media all and (max-width: 790px) {
+
+    .footer {
+    display: block;
+    max-width: 800px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    text-align: center;
+    padding: 0px 100px 0px 100px;
+    vertical-align: middle;
+  }
+
+    .footer-1 {
+    display: block;
+    width: 50%;
+    float: left;
+    margin: auto;
+    min-width: 200px;
+    vertical-align: middle;
+    padding: 20px 0 10px 0;
+  }
+
+  .footer-2 {
+    display: block;
+    width: 50%;
+    float: left;
+    margin: auto;
+    min-width: 150px;
+    vertical-align: middle;
+    padding: 20px 0 10px 0;
+  }
+
+  .footer-3 {
+    display: block;
+    width: 50%;
+    float: left;
+    margin: auto;
+    min-width: 150px;
+    vertical-align: middle;
+    padding: 10px 0 20px 0;
+  }
+
+  .footer-4 {
+    display: block;
+    width: 50%;
+    float: left;
+    margin: auto;
+    min-width: 150px;
+    vertical-align: middle;
+    padding: 10px 0 20px 0;
+  }
+}
+
+@media all and (max-width: 650px) {
+
+  //=========================
+  //    JAVASCRIPT MENU
+  //=========================
+
+  .js .main-nav {
+    position: relative;
+    background-color: transparent;
+    background-image:none;
+    clear: both;
+    margin: 0 auto;
+    color: #706557;
+  }
+
+  .menu li {
+    padding-left: 20px;
+    margin-left: 20px;
+  }
+
+  .js .main-nav a {
+    color: #706557;
+  }
+
+  .js .main-nav .menu li {
+    float: none;
+    background-color: rgba(255,255,255,.8);
+    border: none;
+  }
+
+  .js .main-nav .menu li a,
+  .js .main-nav .menu li li a {
+    color: #706557;
+    font-size: 13px;
+    font-weight: normal;
+    height: 45px;
+    line-height: 45px;
+    padding: 0 15px;
+    border: none;
+    background-color: transparent;
+    background: none;
+    border-bottom: 0px solid #f5f5f5;
+    text-shadow: none;
+    text-align: left;
+    cursor: pointer;
+  }
+
+  .js .menu .current_page_item a {
+    background-color: transparent;
+  }
+
+  #responsive_current_menu_item {
+    color: #706557;
+  }
+
+  .js .main-nav .menu li a:hover,
+  .js .main-nav .menu li li a:hover {
+    background-image: none;
+    filter: none;
+    background-color: #A2573A!important;
+    color: #FFF;
+  }
+
+  .page-item {
+    background: none;
+  }
+
+  .current-page-item {
+    background: none;
+  }
+  .js .main-nav .menu li ul {
+    position: static;
+    visibility: visible;
+    background-color: transparent;
+  }
+
+}
+
+@media all and (max-width: 600px) {
+
+
+    .footer {
+    display: block;
+    max-width: 800px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    text-align: center;
+    padding: 0px 100px 0px 100px;
+    vertical-align: middle;
+  }
+
+
+    .footer-1 {
+    display: block;
+    width: 100%;
+    float: left;
+    margin: auto;
+    min-width: 200px;
+    vertical-align: middle;
+    padding: 20px 0 10px 0;
+  }
+
+  .footer-2 {
+    display: block;
+    width: 100%;
+    float: left;
+    margin: auto;
+    min-width: 150px;
+    vertical-align: middle;
+    padding: 10px 0 10px 0;
+  }
+
+  .footer-3 {
+    display: block;
+    width: 100%;
+    float: left;
+    margin: auto;
+    min-width: 150px;
+    vertical-align: middle;
+    padding: 10px 0 10px 0;
+  }
+
+  .footer-4 {
+    display: block;
+    width: 100%;
+    float: left;
+    margin: auto;
+    min-width: 150px;
+    vertical-align: middle;
+    padding: 10px 0 20px 0;
+  }
+
+}
+
 
 @media all and (max-width: 415px) { // anything 415px and smaller
   #right h4 {
     font-size: 26px;
   }
 }
+
 
